--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <div class="bagianatas">
+       <div  class="navbar">
         <ul>
-            <li>Home</li>
+            <li style="margin-left: -20px;">Home</li>
             <li>Destination</li>
             <li>History</li>
             <li>Gallery</li>
             <li>Community</li>
         </ul>
+        </div> 
         <h1><span>Discover Our Treasure</span> In Indonesia</h1>
-        <button >Search</button>
-        <button >Sign In</button>
+        <button style="background-color: #EBF6FA; stroke: none;" >Search</button>
+        <button class="sign" >Sign In</button>
     </div>
     <div class="bagianbawah">
         <div class="card1">
