--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet"></link>
+    <link href="https://fonts.googleapis.com/css2?family=Rasa&display=swap" rel="stylesheet"></link>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="bagianatas">
        <div  class="navbar">
         <ul>
-            <li style="margin-left: -20px;">Home</li>
-            <li>Destination</li>
-            <li>History</li>
-            <li>Gallery</li>
-            <li>Community</li>
+            <li style=" font-weight: bold;">Home</li>
+            <li class="nav">Destination</li>
+            <li class="nav">History</li>
+            <li class="nav" >Gallery</li>
+            <li class="nav">Community</li>
         </ul>
         </div> 
         <h1><span>Discover Our Treasure</span> In Indonesia</h1>
@@ -22,7 +25,8 @@
         <button class="sign" >Sign In</button>
     </div>
     <div class="bagianbawah">
-        <div class="card1">
+        <div style = "margin-left: 118px;" class="card">
+            <img src="img/beach2.jpg" alt="Pantai Dlodo">
             <h3>Pantai Dlodo</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                  Quaerat non magni odit adipisci, commodi dolor illum doloribus 
@@ -30,7 +34,8 @@
                  necessitatibus sed iusto quis.</p>
         </div>
 
-        <div class="card2">
+        <div style="margin-left: 180px;" class="card">
+            <img src="img/beach2.jpg" alt="Pantai Dlodo">
             <h3>Pantai Dlodo</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                  Quaerat non magni odit adipisci, commodi dolor illum doloribus 
@@ -38,7 +43,8 @@
                  necessitatibus sed iusto quis.</p>
         </div>
 
-        <div class="card3">
+        <div style ="margin-left: 180px;" class="card">
+            <img src="img/beach2.jpg" alt="Pantai Dlodo">
             <h3>Pantai Dlodo</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                  Quaerat non magni odit adipisci, commodi dolor illum doloribus 
