--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet"></link>
     <link href="https://fonts.googleapis.com/css2?family=Rasa&display=swap" rel="stylesheet"></link>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -21,10 +22,10 @@
         </ul>
         </div> 
         <h1><span>Discover Our Treasure</span> In Indonesia</h1>
-        <button style="background-color: #EBF6FA; stroke: none;" >Search</button>
-        <button class="sign" >Sign In</button>
+        <button class="srch" style="background-color: #EBF6FA; stroke: none;" >Search</button>
+        <button class="sign" >Join Us</button>
     </div>
-    <div class="bagianbawah">
+    <div style ="width: 100%;"class="bagianbawah">
         <div style = "margin-left: 118px;" class="card">
             <img src="img/beach2.jpg" alt="Pantai Dlodo">
             <h3>Pantai Dlodo</h3>
