--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                  necessitatibus sed iusto quis.</p>
         </div>
 
-        <div style="margin-left: 180px;" class="card">
+        <div style="margin-left: 9.4%;" class="card">
             <img src="img/beach2.jpg" alt="Pantai Dlodo">
             <h3>Pantai Dlodo</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -44,7 +44,7 @@
                  necessitatibus sed iusto quis.</p>
         </div>
 
-        <div style ="margin-left: 180px;" class="card">
+        <div style ="margin-left: 9.4%;" class="card">
             <img src="img/beach2.jpg" alt="Pantai Dlodo">
             <h3>Pantai Dlodo</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
