--- a/destination.html
+++ b/destination.html
@@ -39,6 +39,7 @@
                             <figure>
                                 <img src="img/beach2.jpg">
                             </figure>
+                            <img src="img/Star.png" alt="rate" class="rate"><br>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                                 Quaerat non magni odit adipisci, commodi dolor illum doloribus 
                                 fugit ut doloremque ipsa sint dolore sit illo delectus 
@@ -51,32 +52,7 @@
                             <figure>
                                 <img src="img/beach2.jpg">
                             </figure>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                Quaerat non magni odit adipisci, commodi dolor illum doloribus 
-                                fugit ut doloremque ipsa sint dolore sit illo delectus 
-                                necessitatibus sed iusto quis.</p>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="card">
-                            <h1>Pantai Dlodo</h1>
-                            <figure>
-                                <img src="img/beach2.jpg">
-                            </figure>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                Quaerat non magni odit adipisci, commodi dolor illum doloribus 
-                                fugit ut doloremque ipsa sint dolore sit illo delectus 
-                                necessitatibus sed iusto quis.</p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="card">
-                            <h1>Pantai Dlodo</h1>
-                            <figure>
-                                <img src="img/beach2.jpg">
-                            </figure>
+                            <img src="img/Star.png" alt="rate" class="rate"><br>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                                 Quaerat non magni odit adipisci, commodi dolor illum doloribus 
                                 fugit ut doloremque ipsa sint dolore sit illo delectus 
@@ -91,6 +67,7 @@
                             <figure>
                                 <img src="img/beach2.jpg">
                             </figure>
+                            <img src="img/Star.png" alt="rate" class="rate"><br>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                                 Quaerat non magni odit adipisci, commodi dolor illum doloribus 
                                 fugit ut doloremque ipsa sint dolore sit illo delectus 
@@ -103,6 +80,35 @@
                             <figure>
                                 <img src="img/beach2.jpg">
                             </figure>
+                            <img src="img/Star.png" alt="rate" class="rate"><br>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Quaerat non magni odit adipisci, commodi dolor illum doloribus 
+                                fugit ut doloremque ipsa sint dolore sit illo delectus 
+                                necessitatibus sed iusto quis.</p>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="card">
+                            <h1>Pantai Dlodo</h1>
+                            <figure>
+                                <img src="img/beach2.jpg">
+                            </figure>
+                            <img src="img/Star.png" alt="rate" class="rate"><br>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Quaerat non magni odit adipisci, commodi dolor illum doloribus 
+                                fugit ut doloremque ipsa sint dolore sit illo delectus 
+                                necessitatibus sed iusto quis.</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="card">
+                            <h1>Pantai Dlodo</h1>
+                            <figure>
+                                <img src="img/beach2.jpg">
+                            </figure>
+                            <img src="img/Star.png" alt="rate" class="rate"><br>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                                 Quaerat non magni odit adipisci, commodi dolor illum doloribus 
                                 fugit ut doloremque ipsa sint dolore sit illo delectus 
