--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    
+    
+
+
     <div class="bagianatas">
        <div  class="navbar">
         <ul>
-            <li style=" font-weight: bold;">Home</li>
-            <li class="nav">Destination</li>
-            <li class="nav">History</li>
-            <li class="nav" >Gallery</li>
-            <li class="nav">Community</li>
+            <a href ="index.html" style=" font-weight: bold;">Home</a>
+            <a href="" class="nav">Destination</a>
+            <a href="" class="nav">History</a>
+            <a href="Gallery.html" class="nav" >Gallery</a>
+            <a href="" class="nav">Community</a>
         </ul>
         </div> 
         <h1><span>Discover Our Treasure</span> In Indonesia</h1>
-        <button class="srch" style="background-color: #EBF6FA; stroke: none;" >Search</button>
-        <button class="sign" >Join Us</button>
+        <a class="srch" style="background-color: #EBF6FA; stroke: none;" >Search</a>
+        <a href ="SignUp.html"class="sign" >Join Us</a>
     </div>
     <div style ="width: 100%;"class="bagianbawah">
         <div style = "margin-left: 118px;" class="card">
