destiantion 1 search e tak benerin

--- a/Gallery.html
+++ b/Gallery.html
@@ -18,10 +18,10 @@
     <div class="menu">
         <ul>
             <a href ="index.html"> Home</a>
-                <a href="" class="nav">Destination</a>
-                <a href="" class="nav">History</a>
+                <a href="destination.html" class="nav">Destination</a>
+                <a href="history.html" class="nav">History</a>
                 <a href="Gallery.html" style=" font-weight: bold;"class="nav" >Gallery</a>
-                <a href="" class="nav">Community</a>
+                <a href="community.html" class="nav">Community</a>
         </ul>
         
         
