--- a/destination.html
+++ b/destination.html
@@ -15,9 +15,9 @@
             <nav>
                 <ul>
                 <a href="index.html"><li>Home</li></a>
-                <a href="destination.html"><li>Destination</li></a>
+                <a style="font-weight: bold;" href="destination.html"><li>Destination</li></a>
                 <a href="history.html"><li>History</li></a>
-                <a href="gallery.html"><li>Gallery</li></a>
+                <a href="Gallery.html"><li>Gallery</li></a>
                 <a href="community.html"><li>Community</li></a>
                 <ul>
             </nav>
@@ -26,9 +26,12 @@
 
     <main>
         <div class="search">
-            <label for="search"></label>
-            <input type="text" id="search">
-            <button type="search"><img src="img/search.png" class="icon"></button>
+            <label  for="search" > 
+                <div style="height: 42px; border-left: 1px solid black; position: absolute;margin-left:31%;" class="vl"></div>
+                <button style="position: absolute; background: transparent; margin-left: 32%; margin-top: 5px; "  type="search"><img src="img/Vector.png" class="icon"></button>
+            </label>
+            <input  type="text" placeholder="Search" id="search">
+            
         </div>
         <div class="container">
             <table>
