--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
        <div  class="navbar">
         <ul>
             <a href ="index.html" style=" font-weight: bold;">Home</a>
-            <a href="" class="nav">Destination</a>
-            <a href="" class="nav">History</a>
+            <a href="destination.html" class="nav">Destination</a>
+            <a href="history.html" class="nav">History</a>
             <a href="Gallery.html" class="nav" >Gallery</a>
-            <a href="" class="nav">Community</a>
+            <a href="community.html" class="nav">Community</a>
         </ul>
         </div> 
         <h1><span>Discover Our Treasure</span> In Indonesia</h1>
