--- a/community.html
+++ b/community.html
@@ -17,7 +17,7 @@
                 <a href="index.html"><li>Home</li></a>
                 <a href="destination.html"><li>Destination</li></a>
                 <a href="history.html"><li>History</li></a>
-                <a href="gallery.html"><li>Gallery</li></a>
+                <a href="Gallery.html"><li>Gallery</li></a>
                 <a href="community.html"><li>Community</li></a>
                 <ul>
             </nav>
