--- a/destination.html
+++ b/destination.html
@@ -34,7 +34,26 @@
             
         </div>
         <div class="container">
-            <table>
+            <form style="float: left;margin-top: 40px;" >
+                <h3 style="margin-left: 9.2%;">Filter</h3>
+                <select style="display: block;" name="Rating" id="rating">
+                    <option value="">Rating</option>
+                    <option value="Bintang 4">Bintang 4</option>
+                    <option value="Bintang 4">Bintang 4</option>
+                    <option value="Bintang 4">Bintang 4</option>
+                </select>
+                <select style="display: block;">
+                    <option>Provinsi</option>
+                    <option>Bali</option>
+                    <option>Jawa Timur</option>
+                </select>
+                <select style="display: block;">
+                    <option>Kota</option>
+                    <option>Denpasar</option>
+                    <option>Banyuwangi</option>
+                </select>
+            </form>
+            <table style="margin-left: 30%; position: relative; " >
                 <tr>
                     <td>
                         <div class="card">
@@ -93,25 +112,6 @@
                                 </tr>
                             </table>
                         </div>
-                    </td>
-                    <td>
-                        <aside>
-                            <select>
-                                <option>Rating</option>
-                                <option>Bintang 5</option>
-                                <option>Bintang 4</option>
-                            </select>
-                            <select>
-                                <option>Provinsi</option>
-                                <option>Bali</option>
-                                <option>Jawa Timur</option>
-                            </select>
-                            <select>
-                                <option>Kota</option>
-                                <option>Denpasar</option>
-                                <option>Banyuwangi</option>
-                            </select>
-                        </aside>
                     </td>
                 </tr>
                 <tr>
