--- a/destination.html
+++ b/destination.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                 <a href="index.html"><li>Home</li></a>
-                <a style="font-weight: bold;" href="destination.html"><li>Destination</li></a>
+                <a href="destination.html" style="font-weight: bold;"><li>Destination</li></a>
                 <a href="history.html"><li>History</li></a>
                 <a href="Gallery.html"><li>Gallery</li></a>
                 <a href="community.html"><li>Community</li></a>
