--- a/history.html
+++ b/history.html
@@ -16,7 +16,7 @@
                 <ul>
                 <a href="index.html"><li>Home</li></a>
                 <a href="destination.html"><li>Destination</li></a>
-                <a href="history.html"><li>History</li></a>
+                <a href="history.html" style="font-weight: bold;"><li>History</li></a>
                 <a href="Gallery.html"><li>Gallery</li></a>
                 <a href="community.html"><li>Community</li></a>
                 <ul>
