--- a/community.html
+++ b/community.html
@@ -18,7 +18,7 @@
                 <a href="destination.html"><li>Destination</li></a>
                 <a href="history.html"><li>History</li></a>
                 <a href="Gallery.html"><li>Gallery</li></a>
-                <a href="community.html"><li>Community</li></a>
+                <a href="community.html" style=" font-weight: bold;"><li>Community</li></a>
                 <ul>
             </nav>
         </div>
