--- a/destination.html
+++ b/destination.html
@@ -65,7 +65,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <h1>Pantai Dlodo</h1>
+                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -94,7 +94,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <h1>Pantai Dlodo</h1>
+                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -125,7 +125,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <h1>Pantai Dlodo</h1>
+                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -154,7 +154,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <h1>Pantai Dlodo</h1>
+                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -185,7 +185,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <h1>Pantai Dlodo</h1>
+                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -214,7 +214,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <h1>Pantai Dlodo</h1>
+                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
                                     </td>
                                 </tr>
                                 <tr>
