fix bgt Allahuakbar

--- a/SignUp.html
+++ b/SignUp.html
@@ -28,7 +28,7 @@
         
     </div>
     <div class= "titlepage">
-        <h1>INDONESIAN BEACH COMMUNITY MEMBERSHP </h1>
+        <h1>INDONESIAN BEACH COMMUNITY MEMBERSHIP </h1>
     </div>
     <div class="Box">
         <p style="font-size: 1.4em; margin-bottom: 40px;"> Complete the form below to sign up for our Indonesian Beach Community</p>
