--- a/destination.html
+++ b/destination.html
@@ -36,18 +36,18 @@
         <div class="container">
             <form style="float: left;margin-top: 40px;" >
                 <h3 style="margin-left: 9.2%;">Filter</h3>
-                <select style="display: block;" name="Rating" id="rating">
-                    <option value="">Rating</option>
-                    <option value="Bintang 4">Bintang 4</option>
-                    <option value="Bintang 4">Bintang 4</option>
-                    <option value="Bintang 4">Bintang 4</option>
+                <select>
+                    <option>Rating</option>
+                    <option>Bintang 4</option>
+                    <option>Bintang 4</option>
+                    <option>Bintang 4</option>
                 </select>
-                <select style="display: block;">
+                <select>
                     <option>Provinsi</option>
                     <option>Bali</option>
                     <option>Jawa Timur</option>
                 </select>
-                <select style="display: block;">
+                <select>
                     <option>Kota</option>
                     <option>Denpasar</option>
                     <option>Banyuwangi</option>
@@ -65,7 +65,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
+                                        <a href="destination2.html" class="klik">Pantai Dlodo</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -94,7 +94,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
+                                        <a href="destination2.html" class="klik">Pantai Dlodo</h1></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -125,7 +125,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
+                                        <a href="destination2.html" class="klik">Pantai Dlodo</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -154,7 +154,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
+                                        <a href="destination2.html" class="klik">Pantai Dlodo</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -185,7 +185,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
+                                        <a href="destination2.html" class="klik">Pantai Dlodo</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -214,7 +214,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="destination2.html"><h1>Pantai Dlodo</h1></a>
+                                        <a href="destination2.html" class="klik">Pantai Dlodo</a>
                                     </td>
                                 </tr>
                                 <tr>
