--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet"></link>
     <link href="https://fonts.googleapis.com/css2?family=Rasa&display=swap" rel="stylesheet"></link>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Quicksand&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
         </div> 
         <h1><span>Discover Our Treasure</span> In Indonesia</h1>
         <a class="srch" style="background-color: #EBF6FA; stroke: none;" >Search</a>
-        <a href ="SignUp.html"class="sign" >Join Us</a>
+        <a href ="SignUp.html"class="sign">Join Us</a>
     </div>
     <div style ="width: 100%;"class="bagianbawah">
         <div style = "margin-left: 118px;" class="card">
