--- a/destination2.html
+++ b/destination2.html
@@ -26,9 +26,12 @@
 
     <main>
         <div class="search">
-            <label for="search"></label>
-            <input type="text" id="search">
-            <button type="search"><img src="img/search.png" class="icon"></button>
+            <label  for="search" > 
+                <div style="height: 42px; border-left: 1px solid black; position: absolute;margin-left:31%;" class="vl"></div>
+                <button style="position: absolute; background: transparent; margin-left: 32%; margin-top: 5px; "  type="search"><img src="img/Vector.png" class="icon"></button>
+            </label>
+            <input  type="text" placeholder="Search" id="search">
+            
         </div>
         <div class="container">
             <table>
@@ -37,7 +40,7 @@
                         <img src="img/beach2.jpg" alt="pantai dlodo">
                     </td>
                     <td>
-                        <h1>Pantai Dlodo</h1>
+                        <h1 >Pantai Dlodo</h1>
                     </td>
                 <tr>
                     <td>
