--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
         </div> 
         <h1><span>Discover Our Treasure</span> In Indonesia</h1>
-        <a class="srch" style="background-color: #EBF6FA; stroke: none;" >Search</a>
+        <a href="destination.html" class="srch" style="background-color: #EBF6FA; stroke: none;" >Search</a>
         <a href ="SignUp.html"class="sign">Join Us</a>
     </div>
     <div style ="width: 100%;"class="bagianbawah">
