--- a/Gallery.html
+++ b/Gallery.html
@@ -31,27 +31,27 @@
     </div>
     <div class="Box">
         <div class="card">
-            <img src="/img/beach2.jpg" alt="">
+            <img src="img/beach2.jpg" alt="">
             <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
         </div>
         <div class="card">
-            <img src="/img/beach2.jpg" alt="">
+            <img src="img/beach2.jpg" alt="">
             <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
         </div>
         <div class="card">
-            <img src="/img/beach2.jpg" alt="">
+            <img src="img/beach2.jpg" alt="">
             <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
         </div>
         <div class="card">
-            <img src="/img/beach2.jpg" alt="">
+            <img src="img/beach2.jpg" alt="">
             <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
         </div>
         <div class="card">
-            <img src="/img/beach2.jpg" alt="">
+            <img src="img/beach2.jpg" alt="">
             <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
         </div>
         <div class="card">
-            <img src="/img/beach2.jpg" alt="">
+            <img src="img/beach2.jpg" alt="">
             <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
         </div>
     </div>
