--- a/destination.html
+++ b/destination.html
@@ -11,17 +11,14 @@
 <body>
 
     <header>
-        <div>
-            <nav>
-                <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="destination.html" style="font-weight: bold;"><li>Destination</li></a>
-                <a href="history.html"><li>History</li></a>
-                <a href="Gallery.html"><li>Gallery</li></a>
-                <a href="community.html"><li>Community</li></a>
-                <ul>
-            </nav>
-        </div>
+        <div class="menu">
+            <ul>
+                <a href ="index.html"> Home</a>
+                    <a href="destination.html" style=" font-weight: bold;" class="nav">Destination</a>
+                    <a href="history.html" class="nav">History</a>
+                    <a href="Gallery.html" class="nav" >Gallery</a>
+                    <a href="community.html" class="nav">Community</a>
+            </ul>
     </header>
 
     
