--- a/community.html
+++ b/community.html
@@ -103,7 +103,7 @@
         </div>
         <div class="abuAbu">
             <h2>OUR SPONSORS</h2>
-            <div class="img-sponsor">
+            <div style="margin-left: 170px;" class="img-sponsor">
                 <img src="img/sponsor2.png" alt="Disneyland" class="sponsor"> 
             </div>
             <div class="img-sponsor">
