--- a/destination2.html
+++ b/destination2.html
@@ -31,124 +31,58 @@
             
         </div>
         <div class="container">
-            <table>
-                <tr>
-                    <td rowspan="3">
-                        <img src="img/beach2.jpg" alt="pantai dlodo">
-                    </td>
-                    <td>
-                        <h1 >Pantai Dlodo</h1>
-                    </td>
-                <tr>
-                    <td>
-                        <img src="img/Star.png" alt="rate" class="rate"><br>
-                        <h2>Location</h2> 
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
-                            Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td rowspan="2">
-                        <img src="img/location.png" alt="location" class="location">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h3>Fasilitas</h3>
-                        <p>Penginapan</p><br>
-                        <h3>Deskripsi</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
-                            Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p><br>
-                        <h3>Review</h3>
-                        <table>
-                            <tr>
-                                <td>
-                                    <p>Pemandangan</p>
-                                    <img src="img/Star.png" alt="rate" class="rate2">
-                                </td>
-                                <td>
-                                    <p>Kerapian</p>
-                                    <img src="img/Star.png" alt="rate" class="rate2">
-                                </td>
-                                <td>
-                                    <p>Fasilitas</p>
-                                    <img src="img/Star.png" alt="rate" class="rate2">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p>Infrastruktur</p>
-                                    <img src="img/Star.png" alt="rate" class="rate2">
-                                </td>
-                                <td>
-                                    <p>Kebersihan</p>
-                                    <img src="img/Star.png" alt="rate" class="rate2">
-                                </td>
-                                <td>
-                                    <p>Kemanan</p>
-                                    <img src="img/Star.png" alt="rate" class="rate2">
-                                </td>
-                            </tr>
-                        </table>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="card">
-                            <table>
-                                <tr>
-                                    <td>
-                                        <img src="img/Ellipse 1.png" alt="hanna" class="profile">
-                                        <p>Hanna Curtis</p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                            Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
-                                            Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <img src="img/Ellipse 2.png" alt="jaxson" class="profile">
-                                        <p>Jaxson Ekstrom Bothman</p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                            Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
-                                            Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </td>
-                    <td>
-                        <h3>Galeri</h3>
-                        <table>
-                            <tr>
-                                <td>
-                                    <img src="img/Rectangle 23-3.png" alt="beach" class="explore">
-                                </td>
-                                <td>
-                                    <img src="img/Rectangle 23-1.png" alt="beach" class="explore">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <img src="img/Rectangle 23.png" alt="beach" class="explore">
-                                </td>
-                                <td>
-                                    <img src="img/Rectangle 23-2.png" alt="beach" class="explore">
-                                </td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
-            </table>
+            <img src="img/beach2.jpg" alt="pantai dlodo">
+            <div class="detail">
+                <h1 >Pantai Dlodo</h1>
+                <img src="img/Star.png" alt="rate" class="rate"><br>
+                <h2>Location</h2> 
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
+                    Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
+                <img src="img/location.png" alt="location" class="location">
+            </div>
+            <div class="">
+                <h3>Fasilitas</h3>
+                <p>Penginapan</p><br>
+                <h3>Deskripsi</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
+                    Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p><br>
+            </div>
+            <div>
+                <h3>Review</h3>
+                <p>Pemandangan</p>
+                <img src="img/Star.png" alt="rate" class="rate2">
+                <p>Kerapian</p>
+                <img src="img/Star.png" alt="rate" class="rate2">
+                <p>Fasilitas</p>
+                <img src="img/Star.png" alt="rate" class="rate2">
+                <p>Infrastruktur</p>
+                <img src="img/Star.png" alt="rate" class="rate2">
+                <p>Kebersihan</p>
+                <img src="img/Star.png" alt="rate" class="rate2">
+                <p>Keamanan</p>
+                <img src="img/Star.png" alt="rate" class="rate2">
+            </div>
+            <div class="card">
+                <img src="img/Ellipse 1.png" alt="hanna" class="profile">
+                <p>Hanna Curtis</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
+                    Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
+                <img src="img/Ellipse 2.png" alt="jaxson" class="profile">
+                <p>Jaxson Ekstrom Bothman</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
+                    Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
+            </div>
+            <div>
+                <h3>Galeri</h3>
+                <img src="img/Rectangle 23-3.png" alt="beach" class="explore">
+                <img src="img/Rectangle 23-1.png" alt="beach" class="explore">
+                <img src="img/Rectangle 23.png" alt="beach" class="explore">
+                <img src="img/Rectangle 23-2.png" alt="beach" class="explore">
+            </div>
     </main>
 </body>
 </html>
